Minor adjustments to POM, fix small things regarding new directory structure